# LaPazCNNsSection

./: 0_convolutions.ipynb  1_building_blocks.ipynb  2_training_cnns.ipynb  3_feature_extraction.ipynb  4_transfer_learning.ipynb  README.md  gpu.py  pyproject.toml
